--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,9 +1,9 @@
-$search-wrapper_stars-color: #ed2e7e;
-$travelulu-brand-color: #5f2eea;
-$success-border-text-color: #00ba88;
-$success-background-color: #f2fffb;
-$alert-border-text-color: #ed2e7e;
-$alert-background-color: #fff3f8;
-$landing-titles-color: #4e4b66;
-$search-box-stats-numbers-color: #2a00a2;
-$icons-color: #bca4ff;
+$primary-color-red: #ed2e2e;
+$highlight-color: #ed2e7e;
+$primary-color-blue: #2a00a2;
+$dark-color: #000000;
+$light-color: #fff;
+$text-color: #4e4b66;
+$success-color: #00ba88;
+$text-lighter-color: #6e7191;
+$secondary-color: #5f2eea;
