--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,9 +1,9 @@
-$primary-color-red: #ed2e2e;
 $highlight-color: #ed2e7e;
-$primary-color-blue: #2a00a2;
+$primary-color: #5f2eea;
 $dark-color: #000000;
 $light-color: #fff;
 $text-color: #4e4b66;
 $success-color: #00ba88;
 $text-lighter-color: #6e7191;
-$secondary-color: #5f2eea;
+$secondary-color: #2a00a2;
+$medium-color: #14142b;
