Add basic formats & structure

--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -7,7 +7,7 @@
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
     - The "symbol *" part is to solve Firefox SVG sprite bug
  */
-*:where(:not(html, iframe, canvas, img, svg, video, audio, input, select, button):not(svg
+*:where(:not(html, iframe, canvas, img, svg, video, audio, input, select, button, h1, h2, h3, h4, h5, h6, p):not(svg
       *, symbol *)) {
   all: unset;
   display: revert;
