--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,1 +1,10 @@
-@use "../base/variables";
+@use "../base/variables" as vars;
+
+.button {
+  color: vars.$light-color;
+  font-weight: 600;
+  height: 55px;
+  background-color: vars.$highlight-color;
+  border: 2px solid vars.$highlight-color;
+  border-radius: 40px;
+}
