Add search component layout

--- a/assets/scss/components/_searchers.scss
+++ b/assets/scss/components/_searchers.scss
@@ -6,9 +6,26 @@
   gap: 2rem;
 }
 
+.searcher-primary__wrapper-input {
+  position: relative;
+  max-width: 26.4rem;
+  max-height: 56px;
+}
+
 .searcher-primary__input {
   max-width: 26.4rem;
   height: 56px;
+  width: 100%;
+}
+
+.searcher-primary__select-icon {
+  position: absolute;
+  max-width: 0.5rem;
+  aspect-ratio: 1/1;
+  top: 60%;
+  /* left: 100px; */
+  right: 25px;
+  transform: translateY(-50%);
 }
 
 .button {
