Add responsiveness to searcher component

--- a/assets/scss/components/_searchers.scss
+++ b/assets/scss/components/_searchers.scss
@@ -8,23 +8,19 @@
 
 .searcher-primary__wrapper-input {
   position: relative;
-  max-width: 26.4rem;
+  min-width: 260px;
   max-height: 56px;
 }
 
-.searcher-primary__title {
-  margin-bottom: 0px;
-}
-
 .searcher-primary__input {
-  max-width: 26.4rem;
+  min-width: 260px;
   height: 56px;
   width: 100%;
 }
 
 .searcher-primary__select-icon {
   position: absolute;
-  max-width: 0.5rem;
+  max-width: 8px;
   aspect-ratio: 1/1;
   top: 50%;
   /* left: 100px; */
@@ -32,7 +28,11 @@
   transform: translateY(-50%);
 }
 
-.button {
-  max-width: 26.4rem;
-  height: 56px;
+@media screen and (min-width: 1200px) {
+  .searcher-primary {
+    flex-direction: row;
+  }
+  .searcher-primary--bigger {
+    flex-grow: 2;
+  }
 }
