--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -7,4 +7,5 @@
   background-color: vars.$highlight-color;
   border: 2px solid vars.$highlight-color;
   border-radius: 40px;
+  min-width: 140px;
 }
