--- a/assets/scss/components/_searchers.scss
+++ b/assets/scss/components/_searchers.scss
@@ -36,3 +36,39 @@
     flex-grow: 2;
   }
 }
+
+.searcher-secondary__wrapper-button {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  min-width: 260px;
+  max-height: 56px;
+  gap: 25px;
+}
+
+.searcher-secondary__button {
+  min-width: 260px;
+  height: 56px;
+  width: 100%;
+}
+
+.searcher-secondary__select-icon {
+  position: absolute;
+  max-width: 100%;
+  height: 8px;
+  aspect-ratio: 1/1;
+  top: 50%;
+  /* left: 100px; */
+  right: 25px;
+  transform: translateY(-50%);
+}
+
+.searcher-secondary__select-icon-left {
+  position: absolute;
+  max-width: 100%;
+  aspect-ratio: 1/1;
+  top: 50%;
+  /* left: 100px; */
+  left: 25px;
+  transform: translateY(-50%);
+}
