--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -34,6 +34,16 @@ menu {
   padding: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
 /* For images to not be able to exceed their container */
 img {
   max-width: 100%;
