--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,4 +1,6 @@
 @use "base/base";
 @use "components/buttons";
 @use "components/inputs";
+@use "components/icons";
 @import "components/searchers";
+@import "components/properties";
