--- a/assets/scss/components/_searchers.scss
+++ b/assets/scss/components/_searchers.scss
@@ -37,19 +37,40 @@
   }
 }
 
+.main-section__search-title {
+  color: #bca4ff;
+}
+
+.searcher-secondary {
+  color: white;
+  padding: 34px;
+  background-color: v.$secondary-color;
+  border-radius: 20px;
+  margin-top: 25px;
+}
+
+.main-section__search-title {
+  margin-bottom: 20px;
+}
+
 .searcher-secondary__wrapper-button {
   display: flex;
   flex-direction: column;
   position: relative;
   min-width: 260px;
   max-height: 56px;
-  gap: 25px;
+  margin-bottom: 20px;
 }
 
 .searcher-secondary__button {
   min-width: 260px;
   height: 56px;
   width: 100%;
+  border-radius: 20px;
+  text-align: left;
+  padding-left: 60px;
+  font-size: 16px;
+  border: 0;
 }
 
 .searcher-secondary__select-icon {
@@ -71,4 +92,9 @@
   /* left: 100px; */
   left: 25px;
   transform: translateY(-50%);
+}
+
+.searcher-secondary__search--button {
+  margin-top: 25px;
+  width: 100%;
 }
