--- a/assets/scss/components/_properties.scss
+++ b/assets/scss/components/_properties.scss
@@ -27,7 +27,6 @@
 .property__images {
   display: flex;
   gap: 20px;
-  margin-top: 30px;
   margin-bottom: 22px;
 }
 
@@ -49,4 +48,14 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .property {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 35px;
+  }
+
+  .property__images {
+    margin-right: 30px;
+  }
 }
