--- a/assets/scss/components/_searchers.scss
+++ b/assets/scss/components/_searchers.scss
@@ -1,4 +1,4 @@
-@use "../base/variables" as v;
+@use "../base/variables" as vars;
 
 .searcher-primary {
   display: flex;
@@ -23,7 +23,6 @@
   max-width: 8px;
   aspect-ratio: 1/1;
   top: 50%;
-  /* left: 100px; */
   right: 25px;
   transform: translateY(-50%);
 }
@@ -35,6 +34,10 @@
   .searcher-primary--bigger {
     flex-grow: 2;
   }
+
+  .searcher-secondary {
+    max-width: 370px;
+  }
 }
 
 .main-section__search-title {
@@ -44,13 +47,13 @@
 .searcher-secondary {
   color: white;
   padding: 34px;
-  background-color: v.$secondary-color;
-  border-radius: 20px;
+  background-color: vars.$secondary-color;
+  border-radius: 15px;
   margin-top: 25px;
 }
 
 .main-section__search-title {
-  margin-bottom: 20px;
+  margin-bottom: 35px;
 }
 
 .searcher-secondary__wrapper-button {
@@ -66,10 +69,10 @@
   min-width: 260px;
   height: 56px;
   width: 100%;
-  border-radius: 20px;
+  border-radius: 15px;
   text-align: left;
   padding-left: 60px;
-  font-size: 16px;
+  font-size: 1rem;
   border: 0;
 }
 
@@ -79,7 +82,6 @@
   height: 8px;
   aspect-ratio: 1/1;
   top: 50%;
-  /* left: 100px; */
   right: 25px;
   transform: translateY(-50%);
 }
@@ -89,12 +91,16 @@
   max-width: 100%;
   aspect-ratio: 1/1;
   top: 50%;
-  /* left: 100px; */
   left: 25px;
   transform: translateY(-50%);
 }
 
 .searcher-secondary__search--button {
-  margin-top: 25px;
+  margin-top: 15px;
   width: 100%;
+}
+
+.searcher-secondary__label {
+  display: inline-block;
+  margin-bottom: 5px;
 }
