Add property layout adjustments

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -8,6 +8,7 @@
   border: 2px solid vars.$highlight-color;
   border-radius: 40px;
   min-width: 140px;
+  font-size: 1rem;
 }
 
 .button--transparent {
