--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -5,6 +5,9 @@ html {
   font-family: Poppins, Arial, Helvetica, "Trebuchet MS", Verdana;
   color: vars.$text-color;
 }
+body {
+  font-size: 16px;
+}
 
 h2 {
   color: vars.$dark-color;
