--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -5,11 +5,14 @@
   margin-bottom: 65px;
   height: 110px;
 
-  .wrapper {
+  .header-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    h1 {
+      margin-bottom: 0;
+    }
   }
 }
