--- a/assets/scss/components/_searchers.scss
+++ b/assets/scss/components/_searchers.scss
@@ -1,5 +1,10 @@
 @use "../base/variables" as vars;
 
+.searcher-main {
+  padding-bottom: 70px;
+  border-bottom: 1px solid vars.$soft-gray;
+}
+
 .searcher-primary {
   display: flex;
   flex-direction: column;
