Fix margin top in secondary searcher

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,6 +1,8 @@
-.main-section {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 35px;
+@media screen and (min-width: 1200px) {
+  .main-section {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 35px;
+  }
 }
